[package]
name = "simple-abns"
version = "0.1.0"
edition = "2021"

authors = ["Joel Koen <mail@joelkoen.com>"]
license = "MIT"
description = "Simplify the ABR's Australian Business Number dataset for easier analysis"
readme = "README.md"
repository = "https://github.com/joelkoen/simple-abns"
keywords = ["abn"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.82"
chrono = { version = "0.4.38", features = ["serde"] }
itertools = "0.12.1"
rayon = "1.10.0"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
xml = "0.8.20"
